# calvo-jp

./: .gitignore  .prettierrc  README.md  index.html  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  velite.config.ts
api/: .pylintrc  pyproject.toml
api/.assets/json/: projects.json
api/api/: config.py  dependencies.py  main.py  models.py  utils.py
api/api/routers/: email.py  image.py  project.py
client/: next.config.js  package.json  tailwind.config.js
public/: index.html
server/: .pylintrc  pyproject.toml  requirements.txt
server/assets/: .gitignore
server/assets/json/: projects.json
server/server/: config.py  main.py  router.py  utils.py
server/server/models/: __init__.py  project.py
server/server/routers/: email.py  project.py  stream.py
server/server/utils/: __init__.py  camelize.py  sendmail.py  strcontains.py
src/: App.tsx  app.css  app.html  main.css  main.tsx
src/components/: Container.tsx  Layout.tsx
src/config/: index.ts
src/hooks/: useProjects.tsx  useSocials.tsx
src/layouts/: Background.tsx  Container.tsx  Footer.tsx  FooterSkeleton.tsx  Header.tsx  HeaderSkeleton.tsx  Layout.tsx  Loader.tsx  Navbar.tsx
src/lib/: toaster.svelte.ts
src/pages/: 404.tsx  About.tsx  Contact.tsx  Landing.tsx  NotFound.tsx  Projects.tsx  _app.tsx  _document.tsx  contact.tsx  index.tsx
src/routes/: +layout.svelte
src/services/: email.ts  index.ts  project.ts
src/styles/: preflight.css
src/types/: project.ts
src/utils/: cleanValues.ts  isObject.ts  isPlainObject.ts  mailer.ts  request.ts
src/widgets/: Alert.tsx  Button.tsx  Image.tsx  TextField.tsx
(+126 files in other folders)
