[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jp calvo <calvojp92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
redis = "^4.0.2"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
